Make sure nav is always visible if screen is large enough
Fixes #170

--- a/app/assets/stylesheets/_viewports.scss
+++ b/app/assets/stylesheets/_viewports.scss
@@ -18,3 +18,9 @@
 		display: none;
 	}
 }
+
+@media only screen and (min-width: $screenMedium) {
+  #site-menu {
+    display: block !important;
+  }
+}
